@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="net.yura.domination"
-      android:versionCode="44"
-      android:versionName="44"
+      android:versionCode="45"
+      android:versionName="45"
       android:installLocation="auto">
       
     <!-- android:targetSdkVersion 11 to hide the legacy menu button on tablets -->
